// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`story.MfaDeviceError 1`] = `
.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 8px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #651FFF;
}

.c24:active {
  background: #354AA4;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c13 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  border-radius: 8px;
}

.c19 {
  box-sizing: border-box;
  height: 100px;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c4 {
  display: flex;
  align-items: center;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c22 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c22::-ms-clear {
  display: none;
}

.c22::placeholder {
  opacity: 0.4;
}

.c22:read-only {
  cursor: not-allowed;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c18 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(255,255,255,0.56);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  color: #FFFFFF;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin-top: 8px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c12 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c12 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c12 label {
  cursor: pointer;
  vertical-align: middle;
}

.c16 {
  border: 4px solid white;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
  >
    <div
      class="c3 c4"
    >
      <span
        class="c5 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c6"
      >
        <div
          class="c7"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c8"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c9"
      kind="danger"
    >
      some server error message
    </div>
    <div
      class="c10"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c13 c14"
      height="240px"
    >
      <img
        class="c15 c16"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c17"
        color="text.secondary"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c18"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c19 c4"
      height="100"
    >
      <div
        class="c20"
        width="50%"
      >
        <label
          class="c21"
        >
          Device name
          <input
            autocomplete="off"
            class="c22"
            color="text.onLight"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c23"
        width="50%"
      >
        <label
          class="c21"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c22"
            color="text.onLight"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c24"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOn 1`] = `
.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 8px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  border-radius: 8px;
}

.c16 {
  box-sizing: border-box;
  height: 100px;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0;
  width: 100%;
}

.c4 {
  display: flex;
  align-items: center;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c19 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c19::-ms-clear {
  display: none;
}

.c19::placeholder {
  opacity: 0.4;
}

.c19:read-only {
  cursor: not-allowed;
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(255,255,255,0.56);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c11 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c11 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c11 label {
  cursor: pointer;
  vertical-align: middle;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
  >
    <div
      class="c3 c4"
    >
      <span
        class="c5 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c6"
      >
        <div
          class="c7"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c8"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c9"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Hardware Key
        </label>
      </div>
      <div
        class="c11"
      >
        <input
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c12 c13"
      height="240px"
    >
      <img
        class="c14"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c15"
        color="text.secondary"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c16 c4"
      height="100"
    >
      <div
        class="c17"
        width="100%"
      >
        <label
          class="c18"
        >
          Device name
          <input
            autocomplete="off"
            class="c19"
            color="text.onLight"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c20"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOtp 1`] = `
.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 8px;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #651FFF;
}

.c23:active {
  background: #354AA4;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  border-radius: 8px;
}

.c18 {
  box-sizing: border-box;
  height: 100px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c4 {
  display: flex;
  align-items: center;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c21 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c21::-ms-clear {
  display: none;
}

.c21::placeholder {
  opacity: 0.4;
}

.c21:read-only {
  cursor: not-allowed;
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c17 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(255,255,255,0.56);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin-top: 8px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c11 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c11 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c11 label {
  cursor: pointer;
  vertical-align: middle;
}

.c15 {
  border: 4px solid white;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
  >
    <div
      class="c3 c4"
    >
      <span
        class="c5 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c6"
      >
        <div
          class="c7"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c8"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c9"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c12 c13"
      height="240px"
    >
      <img
        class="c14 c15"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c16"
        color="text.secondary"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c17"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c18 c4"
      height="100"
    >
      <div
        class="c19"
        width="50%"
      >
        <label
          class="c20"
        >
          Device name
          <input
            autocomplete="off"
            class="c21"
            color="text.onLight"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c22"
        width="50%"
      >
        <label
          class="c20"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c21"
            color="text.onLight"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c23"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceWebauthn 1`] = `
.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 8px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  border-radius: 8px;
}

.c16 {
  box-sizing: border-box;
  height: 100px;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0;
  width: 100%;
}

.c4 {
  display: flex;
  align-items: center;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c19 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c19::-ms-clear {
  display: none;
}

.c19::placeholder {
  opacity: 0.4;
}

.c19:read-only {
  cursor: not-allowed;
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(255,255,255,0.56);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c11 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c11 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c11 label {
  cursor: pointer;
  vertical-align: middle;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
  >
    <div
      class="c3 c4"
    >
      <span
        class="c5 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c6"
      >
        <div
          class="c7"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c8"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c9"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Hardware Key
        </label>
      </div>
    </div>
    <div
      class="c12 c13"
      height="240px"
    >
      <img
        class="c14"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c15"
        color="text.secondary"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c16 c4"
      height="100"
    >
      <div
        class="c17"
        width="100%"
      >
        <label
          class="c18"
        >
          Device name
          <input
            autocomplete="off"
            class="c19"
            color="text.onLight"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c20"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.PasswordOnlyError 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 16px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c6 a {
  color: #FFFFFF;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        data-testid="password"
      >
        <div
          class="c5"
          color="light"
        >
          Set A Password
        </div>
        <div
          class="c6"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c7"
        >
          <label
            class="c8"
          >
            Username
            <input
              autocomplete="off"
              class="c9"
              color="text.onLight"
              inputmode="text"
              readonly=""
              type="text"
              value="john@example.com"
            />
          </label>
        </div>
        <div
          class="c7"
        >
          <label
            class="c8"
          >
            Password
            <input
              autocomplete="off"
              class="c9"
              color="text.onLight"
              inputmode="text"
              placeholder="Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <div
          class="c7"
        >
          <label
            class="c8"
          >
            Confirm Password
            <input
              autocomplete="off"
              class="c9"
              color="text.onLight"
              inputmode="text"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <button
          class="c10"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`story.PrimaryPasswordlessError 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
  margin-top: 4px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: none;
  text-decoration: underline;
}

.c12:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 464px;
  background-color: #222C59;
}

.c2 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-top: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
  margin-top: 16px;
  text-align: center;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c6 a {
  color: #FFFFFF;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        data-testid="passwordless"
      >
        <div
          class="c5"
          color="light"
        >
          Set A Passwordless Device
        </div>
        <div
          class="c6"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c7"
          width="100%"
        >
          <label
            class="c8"
          >
            Device name
            <input
              autocomplete="off"
              class="c9"
              color="text.onLight"
              inputmode="text"
              placeholder="Name"
              type="text"
              value="passwordless-device"
            />
          </label>
        </div>
        <button
          class="c10"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
        <div
          class="c11"
        >
          <button
            class="c12"
            kind="text"
          >
            Use password
          </button>
        </div>
      </div>
    </div>
  </div>
</form>
`;
